--- a/.buildkite/owen-pipeline.yaml
+++ b/.buildkite/owen-pipeline.yaml
@@ -1,6 +1,6 @@
 steps:
   - label: "This is the first step"
-    command: ./print_numbers.sh
+    command: ./buildkite/print_numbers.sh
     key: "build"
   
   - label: "This will be done after numbers are printed"
